force-app/src/objects/TR1__Resource_Availability_Overlap__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>TR1__Candidate_Overlapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Candidate Overlapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Delete_Existing_CA_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Existing CA Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Overlapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Overlapping</label>
        <type>Checkbox</type>
    </fields>
    <label>Resource Availability Overlap</label>
</CustomObject>